Fix bug - PuzzleCells were still clickable after completion. The cells could be clicked, and therefore have their style set to Selected (and thus visible) after completion. Added an unclickable class immediately upon completion (to cover the animation period) and added the Unclickable style to the classList after the waitTime.

--- a/frontend/src/styles/PuzzleCell.module.css
+++ b/frontend/src/styles/PuzzleCell.module.css
@@ -33,6 +33,10 @@
     animation-fill-mode: forwards;
 }
 
+.Unclickable {
+    pointer-events: none;
+}
+
 @keyframes letter_spin {
     from {
         transform: rotateY(0deg);
